--- a/_config.yaml
+++ b/_config.yaml
@@ -8,8 +8,8 @@ proofer: false
 
 # site social media and other links
 links:
-  email: contact@MaybellBanting.com
-  orcid: 0000-0001-8713-9213
+  email: maybellbanting@gmail.com
+  orcid: 0009-0003-8648-8819
   google-scholar: ETJoidYAAAAJ
   github: MaybellBanting
   twitter: MaybellBanting
